--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
         </div>
     </div>
 
+
+    <!--** Modal   vvvv -->
+
+
     <div class="modal fade bd-example-modal-lg" role="dialog" tabindex="-1" aria-labelledby="myLargeModalLabel"
         aria-hidden="true" id="watermelonModal">
         <div class="modal-dialog modal-lg" role="document">
@@ -179,27 +183,32 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-4">
-                                <img src="./CSS/Img/Micheladas-El-Gordo-Watermelon-Rimming-Dip-Chamoy.jpg" alt="">
+                                <img class="modal-img"
+                                    src="./CSS/Img/Micheladas-El-Gordo-Watermelon-Rimming-Dip-Chamoy.jpg" alt="">
                             </div>
-                            <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-3 ml-auto">.col-md-3 .ml-auto</div>
-                            <div class="col-md-2 ml-auto">.col-md-2 .ml-auto</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 ml-auto">.col-md-6 .ml-auto</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-9">
-                                Level 1: .col-sm-9
-                                <div class="row">
-                                    <div class="col-8 col-sm-6">
-                                        Level 2: .col-8 .col-sm-6
-                                    </div>
-                                    <div class="col-4 col-sm-6">
-                                        Level 2: .col-4 .col-sm-6
-                                    </div>
+                            <div class="col-md-4 ml-auto stackem">
+                                <div>
+                                    <h6><strong>Desription</strong></h6>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore debitis iusto
+                                        beatae
+                                        a accusantium culpa ea nam, aspernatur placeat? Ullam perferendis dolorum
+                                        molestiae
+                                        quasi magnam et maiores animi officia. Error?
+                                    </p>
+                                </div>
+                                <div class="qty-selector">
+                                    <label for="qty">Qty.</label>
+                                    <select name="qty" id="watermelonQty">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <button class="btn btn-modal">Add To Cart</button>
                                 </div>
                             </div>
                         </div>
@@ -222,26 +231,33 @@
                 <div class="modal-body">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-4">.col-md-4</div>
-                            <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-3 ml-auto">.col-md-3 .ml-auto</div>
-                            <div class="col-md-2 ml-auto">.col-md-2 .ml-auto</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 ml-auto">.col-md-6 .ml-auto</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-9">
-                                Level 1: .col-sm-9
-                                <div class="row">
-                                    <div class="col-8 col-sm-6">
-                                        Level 2: .col-8 .col-sm-6
-                                    </div>
-                                    <div class="col-4 col-sm-6">
-                                        Level 2: .col-4 .col-sm-6
-                                    </div>
+                            <div class="col-md-4">
+                                <img class="modal-img"
+                                    src="./CSS/Img/Micheladas-El-Gordo-Spicy-Cucumber-Rimming-Dip-Chamoy.jpg">
+                            </div>
+                            <div class="col-md-4 ml-auto stackem">
+                                <div>
+                                    <h6><strong>Desription</strong></h6>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore debitis iusto
+                                        beatae
+                                        a accusantium culpa ea nam, aspernatur placeat? Ullam perferendis dolorum
+                                        molestiae
+                                        quasi magnam et maiores animi officia. Error?
+                                    </p>
+                                </div>
+                                <div class="qty-selector">
+                                    <label for="qty">Qty.</label>
+                                    <select name="qty" id="watermelonQty">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <button class="btn btn-modal">Add To Cart</button>
                                 </div>
                             </div>
                         </div>
@@ -264,26 +280,33 @@
                 <div class="modal-body">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-4">.col-md-4</div>
-                            <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-3 ml-auto">.col-md-3 .ml-auto</div>
-                            <div class="col-md-2 ml-auto">.col-md-2 .ml-auto</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 ml-auto">.col-md-6 .ml-auto</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-9">
-                                Level 1: .col-sm-9
-                                <div class="row">
-                                    <div class="col-8 col-sm-6">
-                                        Level 2: .col-8 .col-sm-6
-                                    </div>
-                                    <div class="col-4 col-sm-6">
-                                        Level 2: .col-4 .col-sm-6
-                                    </div>
+                            <div class="col-md-4">
+                                <img class="modal-img"
+                                    src="./CSS/Img/Micheladas-El-Gordo-Spicy-Mango-Rimming-Dip-Chamoy.jpg" alt="">
+                            </div>
+                            <div class="col-md-4 ml-auto stackem">
+                                <div>
+                                    <h6><strong>Desription</strong></h6>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore debitis iusto
+                                        beatae
+                                        a accusantium culpa ea nam, aspernatur placeat? Ullam perferendis dolorum
+                                        molestiae
+                                        quasi magnam et maiores animi officia. Error?
+                                    </p>
+                                </div>
+                                <div class="qty-selector">
+                                    <label for="qty">Qty.</label>
+                                    <select name="qty" id="watermelonQty">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <button class="btn btn-modal">Add To Cart</button>
                                 </div>
                             </div>
                         </div>
@@ -293,7 +316,7 @@
         </div>
     </div>
 
-
+    <!-- ** Modal  ^^^^-->
 
     <div class="container">
         <div class="customer-love" id="customer-love">
